--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </button>
             </div>
             <div class="col-lg-6">
-                <img class="img-fluid rounded title-img" src="images/title.jpg" alt="">
+                <img class="img-fluid rounded title-img" src="title.jpg" alt="">
             </div>
         </div>
     </div>
@@ -105,7 +105,7 @@
                   <div class="carousel-item active">
                     <div class="row">
                         <div class="col-lg-6 col-md-8 col-sm-10">
-                            <img src="images/testimonials/c1.jpg" class="d-block w-70 img-fluid rounded" alt="...">
+                            <img src="c1.jpg" class="d-block w-70 img-fluid rounded" alt="...">
                         </div>
                         <div class="test-text col-lg-6 col-md-12">
                             <h1>Harry & Lara</h1>
@@ -117,7 +117,7 @@
                   <div class="carousel-item">
                     <div class="row">
                         <div class="col-lg-6 col-md-8 col-sm-10">
-                            <img src="images/testimonials/c2.jpg" class="d-block w-70 img-fluid rounded" alt="...">
+                            <img src="c2.jpg" class="d-block w-70 img-fluid rounded" alt="...">
                         </div>
                         <div class="test-text col-lg-6 col-md-12">
                             <h1>Jim & Maria </h1>
@@ -130,7 +130,7 @@
                   <div class="carousel-item">
                     <div class="row">
                         <div class="col-lg-6 col-md-8 col-sm-10">
-                            <img src="images/testimonials/c3.jpg" class="d-block w-70 img-fluid rounded" alt="...">
+                            <img src="c3.jpg" class="d-block w-70 img-fluid rounded" alt="...">
                         </div>
                         <div class="test-text col-lg-6 col-md-12">
                             <h1>Nichole & Fara</h1>
